1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!

    Checks & Agents:
    * 0994 FIX: agent plugin smart: fixed syntax error
    * 0989 FIX: logwatch.ec: Fix forwarding multiple messages via syslog/TCP...
    * 0943 FIX: if.include: fixed incorrect traffic percentage values in the check output of if checks...
    * 0944 FIX: oracle_tablespaces: fixed calculation of space left and number of remaining increments...

    Multisite:
    * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime

    WATO:
    * 0990 FIX: Fix HTTP error handling in bulk inventory...

    Reporting & Availability:
    * 0991 FIX: Availability: optionally show time stamps as UNIX epoch time...

    Livestatus:
    * 0988 FIX: livedump: Fix exception in case no contact groups are defined for a service


1.2.5i4:
    Core & Setup:
    * 0940 SEC: Fixed various core SIGSEGV when using malformed livestatus queries...

    Checks & Agents:
    * 0812 nginx_status: New check for monitoring status information of the Nginx web server...
    * 0986 citrix_licenses: new check for monitoring Citrix licenses
    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0619 adva_fsp_temp: new check to monitor temperature and temperature trends on ADVA scalable optical transport solutions
    * 0993 raritan_pdu_inlet: now delivers performance data
    * 1003 ibm_svc_enclosure: support new firmware, also check fan modules