@@ -1,0 +1,8 @@
+Title: raritan_pdu_outletcount: new check for outlet count of Raritan PX-2000 family PDUs
+Level: 1
+Component: checks
+Version: 1.2.5i5
+Date: 1403801183
+Class: feature
+
+
